--- a/jets.tex
+++ b/jets.tex
@@ -126,7 +126,7 @@ A schematic describing infrared safety problem is shown in Figure~\ref{fig:infra
 \begin{figure}[htp]
 \centering
 \includegraphics[width=.65\textwidth]{theory/infraredSafe}
-\caption{An illustration of infrared unsafe behavior. The particle \pt\ is proportional to the height and the horizontal axis indicates rapidity. Taken from \cite{Salam_2007} }
+\caption{An illustration of infrared unsafe behavior. The particle \pt\ is proportional to the height and the horizontal axis indicates rapidity. Taken from \cite{Salam_2007}. }
 \label{fig:infraredSafe}
 \end{figure}
 
