--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -2526,13 +2526,17 @@ nourl           = "https://cds.cern.ch/record/1696485",
 @article{2019108,
 title = "Measurement of the nuclear modification factor for inclusive jets in Pb+Pb collisions at $\sqrtsnn=5.02$ TeV with the ATLAS detector",
 author = "{ATLAS Collaboration}",
-journal = "Physics Letters B",
-volume = "790",
-pages = "108 - 128",
-year = "2019",
-issn = "0370-2693",
-nodoi = "https:/doi.org/10.1016/j.physletb.2018.10.076",
-nourl = "http://www.sciencedirect.com/science/article/pii/S037026931830995X",
+collaboration  = "ATLAS",
+      journal        = "Phys. Lett.",
+      volume         = "B790",
+      year           = "2019",
+      pages          = "108-128",
+      doi            = "10.1016/j.physletb.2018.10.076",
+      eprint         = "1805.05635",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-EP-2018-105",
+      SLACcitation   = "%%CITATION = ARXIV:1805.05635;%%"
 }
 
 
