--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -116,35 +116,35 @@ For my Mother, Father, and Brother
 \mainmatter
 %-------------------------------------------------------------------------------
 
-%\chapter{Introduction}
-%\label{sec:intro}
-%\input{thesisintro.tex}
-%
+\chapter{Introduction}
+\label{sec:intro}
+\input{thesisintro.tex}
 
-%\chapter{Theoretical Introduction}
-%\label{sec:theory}
-%\input{theory.tex}
-%\clearpage
+
+\chapter{Theoretical Introduction}
+\label{sec:theory}
+\input{theory.tex}
+\clearpage
 
 \chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
 \input{jetMeasurements.tex}
 \clearpage
 
-%\chapter{Experimental Setup}
-%\label{sec:setup}
+\chapter{Experimental Setup}
+\label{sec:setup}
 %\input{setup.tex}
-%\clearpage
+\clearpage
 
-%\chapter{ATLAS Qualification Task}
-%\label{sec:qualification}
+\chapter{ATLAS Qualification Task}
+\label{sec:qualification}
 %\input{qualification.tex}
-%\clearpage
+\clearpage
 
-%\chapter{Measurement of Angular Correlations Between Tracks And Jets}
-%\label{sec:mainanalysis}
+\chapter{Measurement of Angular Correlations Between Tracks And Jets}
+\label{sec:mainanalysis}
 %\input{mainAnalysis.tex}
-%\clearpage
+\clearpage
 
 %\appendix
 %\chapter{HI JER Uncertainty}
