--- a/thesisintro.tex
+++ b/thesisintro.tex
@@ -8,9 +8,8 @@ Relativistic heavy ion collisions such as those at the LHC provide insight into 
 
 The quark-gluon plasma (see Refs.~\cite{Roland:2014jsa,Busza:2018rrf} for recent reviews) can be probed by jets, sprays of particles that come from hard scattering processes between the nucleons involved in the collision. These jets are produced early in the collision and interact with the QGP as they make their way to the detector. Studying the rates and characteristics of these jets in \pbpb\ collisions, and comparing them to similar quantities in \pp\ collisions can provide information on the properties of the QGP. In particular, studying the  fragmentation pattern of these jets and how the energy is distributed around the jet axis can provide more information on the jet structure and put constraints on the medium response to the jet.
 
-This thesis is split into 4 main chapters. An overview of the LHC and the ATLAS detector is given in Chapter~\ref{sec:setup}, Chapter~\ref{sec:theory} will describe the QCD framework that will give context to the measurements discussed, Chapter~\ref{sec:qualification} will describe the work undertaken to become a member of the ATLAS Collaboration, and Chapter~\ref{sec:mainanalysis} will provide a detailed description of the measurement to determine the angular distributions of charged particles in \pbpb\ and \pp\ collisions. 
+This thesis is split into 4 main chapters. Chapter~\ref{sec:theory} briefly describes the general theoretical background on QCD, heavy ion collisions, QGP, and jets, giving context to the measurements discussed in this thesis. Chapter~\ref{sec:jetMeasurements} will briefly discuss major jet measurements done by the ATLAS Heavy Ion Group. Chapter~\ref{sec:setup} gives an overview of the LHC and the ATLAS detector. Chapter~\ref{sec:qualification} will describe the work undertaken to become a member of the ATLAS Collaboration, and Chapter~\ref{sec:mainanalysis} will provide a detailed description of the measurement to determine the angular distributions of charged particles in \pbpb\ and \pp\ collisions. 
 
-%something about the SM??
 
 
 
