--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,36 @@
 % !TEX root = thesis-ex.tex
+@article{CasalderreySolana:2012ef,
+      author         = "Casalderrey-Solana, Jorge and Mehtar-Tani, Yacine and
+                        Salgado, Carlos A. and Tywoniuk, Konrad",
+      title          = "{New picture of jet quenching dictated by color
+                        coherence}",
+      journal        = "Phys. Lett.",
+      volume         = "B725",
+      year           = "2013",
+      pages          = "357-360",
+      doi            = "10.1016/j.physletb.2013.07.046",
+      eprint         = "1210.7765",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2012-291, LU-TP-12-37",
+      SLACcitation   = "%%CITATION = ARXIV:1210.7765;%%"
+}
+
+@article{Blaizot:2013hx, 
+      author         = "Blaizot, Jean-Paul and Iancu, Edmond and Mehtar-Tani,
+                        Yacine",
+      title          = "{Medium-induced QCD cascade: democratic branching and
+                        wave turbulence}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "111",
+      year           = "2013",
+      pages          = "052001",
+      doi            = "10.1103/PhysRevLett.111.052001",
+      eprint         = "1301.6102",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1301.6102;%%"
+}
 
 @article{2013220,
       title          = "{Measurement of the jet radius and transverse momentum
