--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -19,6 +19,7 @@
 \usepackage{amsmath}
 \usepackage{slashed}
 \usepackage{placeins}
+\usepackage{tabularx}
 \usepackage[utf8]{inputenc}
 
 \usepackage[backend=bibtex]{\ATLASLATEXPATH atlaspackage}
@@ -56,7 +57,7 @@
 \phdthesis
 \advisor{Anne Marie Sickles}
 \degreeyear{2019}
-\committee{Professor Matthias Grosse Perdekamp, Chair\\Professor Anne Marie Sickles, Advisor\\ Professor Aida El-Khadra \\ Professor Bryce Gadaway}
+\committee{Professor Matthias Grosse Perdekamp, Chair\\Professor Anne Marie Sickles, Advisor\\ Professor Lance Cooper \\ Professor Bryce Gadaway}
 \maketitle
 
 \frontmatter
@@ -116,35 +117,34 @@ For my Mother, Father, and Brother
 \mainmatter
 %-------------------------------------------------------------------------------
 
-\chapter{Introduction}
-\label{sec:intro}
-\input{thesisintro.tex}
-
-
-\chapter{Theoretical Introduction}
-\label{sec:theory}
-\input{theory.tex}
-\clearpage
+%\chapter{Introduction}
+%\label{sec:intro}
+%\input{thesisintro.tex}
+%
+%\chapter{Theoretical Introduction}
+%\label{sec:theory}
+%\input{theory.tex}
+%\clearpage
 
 \chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
 \input{jetMeasurements.tex}
 \clearpage
 
-\chapter{Experimental Setup}
-\label{sec:setup}
+%\chapter{Experimental Setup}
+%\label{sec:setup}
 %\input{setup.tex}
-\clearpage
-
-\chapter{ATLAS Qualification Task}
-\label{sec:qualification}
+%\clearpage
+%
+%\chapter{ATLAS Qualification Task}
+%\label{sec:qualification}
 %\input{qualification.tex}
-\clearpage
-
-\chapter{Measurement of Angular Correlations Between Tracks And Jets}
-\label{sec:mainanalysis}
+%\clearpage
+%
+%\chapter{Measurement of Angular Correlations Between Tracks And Jets}
+%\label{sec:mainanalysis}
 %\input{mainAnalysis.tex}
-\clearpage
+%\clearpage
 
 %\appendix
 %\chapter{HI JER Uncertainty}
