added section on jet fluid model, nodoi -> doi in bib file

--- a/macros.tex
+++ b/macros.tex
@@ -136,6 +136,8 @@
 \newcommand{\gjet}{\mbox{$\gamma$-jet}}
 \newcommand{\invnb}{\mbox{${\rm nb^{-1}}$}}
 \newcommand{\kt}{\mbox{$k_{t}$}}
+\newcommand{\kTsq}{\mbox{$k_{\rm T}^2$}}
+\newcommand{\kT}{\mbox{$k_{\rm T}$}}
 \newcommand{\sumet}{\mbox{$\Sigma E_{\mathrm{T}}$}}
 \newcommand{\ETrec}{\mbox{$E_{\mathrm{T}}^{\mathrm{rec}}$}}
 \newcommand{\ETtbyf}{\mbox{$E_{\mathrm{T}}^{3\times 4}$}}
