first draft to Anne

--- a/jetMeasurements.tex
+++ b/jetMeasurements.tex
@@ -204,7 +204,7 @@ It can be seen that the analytic fits and the MC are in good agreement. While th
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Jet Fluid model}
+\section{Jet Fluid model}
 This discussion is based on the model introduced in \cite{Tachibana:2017syd}. This model is based on the evolution of the jet and QGP in a coupled manner, considering the energy and transverse momentum exchange between them. In this picture, both the jet and medium are allowed to modify each other; the jet is modified via collisional and radiative processes while the medium evolves hydrodynamically and is modified because it picks up the energy lost by the jet. 
 
 The time evolution of the jet is given 
@@ -280,16 +280,16 @@ The $R_{\rm AA}^\rho$ distribution in Figure~\ref{fig:jf_jetshapemod}, shows tha
 \begin{subfigure}{.45\textwidth}
   \centering
 \includegraphics[width=0.95\textwidth]{figures/jetMeasurements/JF_jetShape}
-\caption{The jet shape as measured by CMS for \pp\ and central \pbpb\ collisions \cite{Chatrchyan:2013kwa} compared to the Jet Fluid model. The shower (blue) and hydro (orange) contributions to the jet shape are highlighted. Figure taken from \cite{Tachibana:2017syd}.}
+\caption{The jet shape as measured by CMS for \pp\ and central \pbpb\ collisions \cite{Chatrchyan:2013kwa} compared to the Jet Fluid model. The shower (blue) and hydro (orange) contributions to the jet shape are highlighted.}
 \label{fig:jf_jetshape}
 \end{subfigure} \qquad
 \begin{subfigure}{.45\textwidth}
   \centering
 \includegraphics[width=0.95\textwidth]{figures/jetMeasurements/JF_jetShapeModification}
-\caption{The modification of the jet shape between \pp\ and \pbpb\ as measured by CMS \cite{Chatrchyan:2013kwa} and compared to the Jet Fluid model. The dashed line shows the modeled modification without the hydro-contribution. Figure taken from \cite{Tachibana:2017syd}.}
+\caption{The modification of the jet shape between \pp\ and \pbpb\ as measured by CMS \cite{Chatrchyan:2013kwa} and compared to the Jet Fluid model. The dashed line shows the modeled modification without the hydro-contribution.}
 \label{fig:jf_jetshapemod}
 \end{subfigure}
-\caption{Fits to quark fractions and fragmentation functions from \pythia8.  Figure taken from \cite{Spousta:2015fca}}
+\caption{Fits to CMS data. Figures taken from \cite{Tachibana:2017syd}.}
 \label{fig:JF_jetShapemodel}
 \end{figure}
 
@@ -303,7 +303,7 @@ The $R_{\rm AA}^\rho$ distribution in Figure~\ref{fig:jf_jetshapemod}, shows tha
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Hybrid Model}
+\section{Hybrid Model}
 
 
 
