--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -117,24 +117,24 @@ For my Mother, Father, and Brother
 \mainmatter
 %-------------------------------------------------------------------------------
 
-%\chapter{Introduction}
-%\label{sec:intro}
-%\input{thesisintro.tex}
-%
-%\chapter{Theoretical Introduction}
-%\label{sec:theory}
-%\input{theory.tex}
-%\clearpage
+\chapter{Introduction}
+\label{sec:intro}
+\input{thesisintro.tex}
+
+\chapter{Theoretical Introduction}
+\label{sec:theory}
+\input{theory.tex}
+\clearpage
 
 \chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
 \input{jetMeasurements.tex}
 \clearpage
 
-%\chapter{Experimental Setup}
-%\label{sec:setup}
-%\input{setup.tex}
-%\clearpage
+\chapter{Experimental Setup}
+\label{sec:setup}
+\input{setup.tex}
+\clearpage
 %
 %\chapter{ATLAS Qualification Task}
 %\label{sec:qualification}
